--- a/src/assets/css/grid.css
+++ b/src/assets/css/grid.css
@@ -1,106 +1,115 @@
 /* Grid */
+
 .grid {
-  width: 100%;
-  overflow-x: auto;
-  /* overflow-y: hidden; */
+    width: 100%;
+    overflow-x: auto;
+    /* overflow-y: hidden; */
 }
 
 .grid .grid-header {
-  height: 50px;
+    height: 50px;
 }
 
 .grid .hide-item {
-  display: none;
+    display: none;
 }
+
 
 /*
   custom table
 */
 
 table {
-  width: 100%;
-  position: relative;
+    width: 100%;
+    position: relative;
 }
 
-table > tbody > tr > td,
-table > thead > tr > th {
-  padding: 0 0 0 10px;
+table>tbody>tr>td,
+table>thead>tr>th {
+    padding: 0 0 0 10px;
 }
 
 .table thead {
-  height: 48px;
-  background-color: #ffffff;
+    height: 48px;
+    background-color: #ffffff;
 }
 
 .table thead tr th {
-  position: sticky;
-  top: 0;
-  background-color: #ffffff;
+    position: sticky;
+    top: 0;
+    background-color: #ffffff;
 }
 
 .custom-input,
 .checkedValue {
-  margin: 0;
-  width: 50px;
-  height: 16px;
+    margin: 0;
+    width: 50px;
+    height: 16px;
 }
 
 .custom-header .custom-color {
-  text-align: justify;
+    text-align: justify;
+    height: 48px;
 }
 
-.custom-header .custom-color > :first-child {
-  width: 42px;
+.custom-header {
+    height: 48px;
+}
+
+.custom-header .custom-color> :first-child {
+    width: 42px;
 }
 
 .custom-header .custom-color .custom-input {
-  margin: 2px 10px 0 16px;
+    margin: 2px 10px 0 16px;
 }
 
 .custom-tbody tr {
-  height: 48px;
+    height: 48px;
 }
 
 .custom-tbody tr td input {
-  margin: 2px 10px 0 16px;
+    margin: 2px 10px 0 16px;
 }
 
 .grid .grid-content,
 .tablescroll_wrapper,
 .tablescroll {
-  height: calc(100% - 25px);
+    height: calc(100% - 25px);
 }
 
 .custom-tbody {
-  overflow: auto;
+    overflow: auto;
 }
 
 .grid tbody tr:nth-child(2n + 1) {
-  background-color: #fafafa;
+    background-color: #fafafa;
 }
 
 .grid tbody tr:hover {
-  background-color: #d9d9d9;
-  cursor: pointer;
+    background-color: #d9d9d9;
+    cursor: pointer;
 }
 
 .align-right {
-  text-align: right;
+    text-align: right;
 }
 
 .selected-row {
-  background-color: rgba(227, 244, 238) !important;
+    background-color: rgba(227, 244, 238) !important;
 }
 
+
 /* create scroll in table */
+
 #gridProperty {
-  overflow-y: auto;
+    overflow-y: auto;
 }
 
 .custom-input:checked:before {
-  background-color: red !important;
+    background-color: red !important;
 }
 
 .hidden-delete {
-  display: none;
+    display: none;
 }
